# FlaskGPT

./: app.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
static/src/css/: input.css
templates/: index.html
