[tool.poetry]
name = "flaskgpt"
version = "0.1.0"
description = "ChatGPT Clone using Flask"
authors = ["Thibault Houdon <houdon.thibault@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.10"
flask = "^2.3.3"
python-dotenv = "1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
